@@ -7,6 +7,7 @@ WinMerge 2.13.14
   Update to PCRE 8.10 (r7210)
   Update SCEW to 1.1.2 (r7212)
   In-line difference highlighting improvement (#3022014)
+  Comment filtering improvement (#3034083)
   Bugfix: Untranslated string ("Merge.rc:nnnn") was displayed 
     in status bar (#3025855)
   Bugfix: Options dialog didn't update when importing settings
